# PacthTracing

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  PathTracing.sln  README.md
PathTracing/: AABB.hpp  BVHNode.hpp  BVHStruct.cpp  BVHStruct.hpp  BinaryReader.h  Boll.hpp  Camera.hpp  HitPoint.hpp  Material.hpp  MeshTriangle.hpp  MeshTriangleGroup.hpp  OBJ_Loader.h  Object.hpp  PathTracing.vcxproj  PathTracing.vcxproj.filters  Plane.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Renderer2.cpp  Scene.cpp  Scene.hpp  Texture.hpp  Tool.hpp  Transform.hpp  Triangle.hpp  Vector.hpp  hello_cuda.cu  main.cpp
PathTracing/cuda/: BENCHMARK.md  BVH.cuh  Camera.cuh  HitPoint.cuh  Material.cuh  OPTIMIZATION.md  PathTracing.cuh  Ray.cuh  Sphere.cuh  Tool.cuh  Triangle.cuh  Vector.cuh  kernel.cu  kernel.cuh
PathTracing/x64/Debug/: PathTracing.exe.recipe  PathTracing.ilk  vc143.idb
PathTracing/x64/Debug/PathTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PathTracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PathTracing/x64/Release/: PathTracing.exe.recipe  PathTracing.iobj  PathTracing.ipdb
PathTracing/x64/Release/PathTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PathTracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SHOW.assets/res/: spot0_0515_203256.ppm  spot0_0516_185338.ppm  spot0_0518_175543.ppm  spot1_0515_210715.ppm  spot1_0516_165352.ppm  spot1_0516_172841.ppm  spot1_0516_173020.ppm  spot1_0516_173539.ppm  spot1_0516_174542.ppm  spot1_0516_174726.ppm  spot1_0516_175549.ppm  spot1_0516_180659.ppm  spot1_0516_182838.ppm  spot1_0516_183120.ppm  spot1_0516_183223.ppm  spot1_0516_184703.ppm  spot1_0516_185320.ppm
model/: 111.mtl  材质学习.mtl  正方体.mtl
model/Scene/: back.mtl  down.mtl  left.mtl  materUV.mtl  right.mtl  spot.mtl  top.mtl
